# hse-2026-inf-theory-lab-01

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml  seminar-03-clean.ipynb
.github/workflows/: ci.yml  docs_deploy.yml  docs_preview.yml
codinglab/: __init__.py  experiment.py  interfaces.py  logger.py  types.py
codinglab/channels/: __init__.py  base.py
codinglab/encoders/: __init__.py  huffman_ngram.py  identity.py  prefix_code_tree.py  prefix_coder.py  shannon_fano_elias.py
codinglab/receivers/: __init__.py  base.py  tracking.py
codinglab/senders/: __init__.py  base.py  fixed.py  probabilistic.py
docs/source/: conf.py  generate_api.py  index.rst
docs/source/user_guide/: index.rst
notebooks/: hw-template-01.ipynb  seminar-03-clean.ipynb  seminar-03-filled.ipynb
src/channels/: base.py
src/encoders/: prefix_code_tree.py  prefix_coder.py
src/receivers/: base.py  tracking.py
src/senders/: fixed.py  probabilistic.py
tests/: __init__.py  conftest.py  test_experiment.py  test_interfaces.py  test_logger.py  test_types.py
tests/test_channels/: test_noiseless.py
tests/test_encoders/: test_huffman_ngram.py  test_identity.py  test_prefix_code_tree.py  test_prefix_coder.py  test_shannon_fano_elias.py
tests/test_receivers/: test_base_receiver.py  test_tracking_receiver.py
tests/test_senders/: test_base_sender.py  test_fixed_sender.py  test_probabilistic_sender.py
