[project]
name = "hse-2026-inf-theory-hw-1"
version = "0.1.0"
license = {text = "MIT"}
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "graphviz (>=0.21,<0.22)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "scipy-stubs (>=1.17.0.2,<2.0.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pandas-stubs (>=2.3.3.260113,<3.0.0.0)"
]

[tool.poetry]
package-mode = false

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

