[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "codinglab"
version = "0.1.0"
description = "Library for coding experiments"
license = { text = "MIT" }
authors = [ { name = "Mikhail Mikhailov", email = "desiment@yandex.ru" } ]
requires-python = ">=3.11,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "graphviz>=0.21,<0.22",
  "jupyter>=1.1.1,<2",
  "matplotlib>=3.10.8,<4",
  "numpy>=2.4.1,<3",
  "pandas>=3,<4",
  "scipy>=1.17,<2",
]

[tool.poetry]
package-mode = true

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
  "pytest (>=9.0.2,<10.0.0)",
  "mypy (>=1.19.1,<2.0.0)",
  "ruff (>=0.14.14,<0.15.0)",
  "pre-commit (>=4.5.1,<5.0.0)",
  "pytest-cov (>=5)",
  "coverage (>=7.5)",
  "pandas-stubs (>=2.3.3,<3.0.0.0)",
]
docs = [
  "sphinx (>=7.3)",
  "sphinx-rtd-theme (>=2.0)",
  "sphinxcontrib-napoleon (>=0.7)",
  "sphinx-autodoc-typehints (>=2.0)",
  "sphinx-copybutton (>=0.5)",
  "myst-nb (>=1.3.0)",
  "linkify-it-py (>=2.0.3)",
]
